--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Assets\MegaFiers\Scripts\MegaFiers\Modifiers\MegaFFD3x3x3.cs" />
     <Compile Include="Assets\PostProcessing\Utilities\CustomMotionTexture\ExampleWheelController.cs" />
     <Compile Include="Assets\MegaFiers\Scripts\MegaFiers\MegaBox3.cs" />
+    <Compile Include="Assets\CameraFitter.cs" />
     <Compile Include="Assets\MAIN GAME\Scripts\Manager\ShakeManager.cs" />
     <Compile Include="Assets\MegaFiers\Scripts\MegaFiers\Modifiers\Warps\MegaFFD4x4x4Warp.cs" />
     <Compile Include="Assets\GPUInstancer\Scripts\Core\DataModel\GPUInstancerRuntimeData.cs" />
@@ -259,6 +260,7 @@
     <Compile Include="Assets\MegaFiers\Scripts\MegaFiers\Modifiers\MegaFFD4x4x4.cs" />
     <Compile Include="Assets\PostProcessing\Runtime\Models\VignetteModel.cs" />
     <Compile Include="Assets\GPUInstancer\Demos\_SharedResources\Scripts\FlyCamera.cs" />
+    <Compile Include="Assets\MAIN GAME\Shaders\2DOutline\Scripts\RenderReplacementShaderToTexture.cs" />
     <Compile Include="Assets\MegaFiers\Scripts\MegaFiers\Modifiers\Warps\MegaSqueezeWarp.cs" />
     <Compile Include="Assets\MegaFiers\Scripts\MegaFiers\Utils\MegaWalkBridge.cs" />
     <Compile Include="Assets\PostProcessing\Runtime\Components\ScreenSpaceReflectionComponent.cs" />
@@ -316,6 +318,7 @@
     <Compile Include="Assets\Demigiant\DOTween\Modules\DOTweenModuleUI.cs" />
     <Compile Include="Assets\MegaFiers\Scripts\MegaFiers\Modifiers\Warps\MegaWarpBind.cs" />
     <Compile Include="Assets\MegaFiers\MegaLiner Scene\Scripts\MoveStretchSquash.cs" />
+    <Compile Include="Assets\MAIN GAME\Shaders\2DOutline\PostProcessOutline.cs" />
     <Compile Include="Assets\GPUInstancer\Scripts\Core\DataModel\GPUInstancerPrefabPrototype.cs" />
     <Compile Include="Assets\GPUInstancer\Scripts\Core\DataModel\GPUInstancerBillboardAtlasBindings.cs" />
     <Compile Include="Assets\MegaFiers\Scripts\MegaShape\MegaShapeRBodyPathNew.cs" />
@@ -417,6 +420,8 @@
     <None Include="Assets\PostProcessing\Resources\Shaders\LutGen.shader" />
     <None Include="Assets\PostProcessing\Resources\Shaders\EyeHistogram.compute" />
     <None Include="Assets\TextMesh Pro\Shaders\TMPro_Mobile.cginc" />
+    <None Include="Assets\MAIN GAME\Shaders\2DOutline\Outline.shader" />
+    <None Include="Assets\MAIN GAME\Shaders\2DOutline\Shaders\HiddenEdgeDetect.shader" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF SSD.shader" />
     <None Include="Assets\PostProcessing\Resources\Shaders\TAA.cginc" />
     <None Include="Assets\QuickOutline\Resources\Shaders\OutlineMask.shader" />
@@ -425,6 +430,7 @@
     <None Include="Assets\MAIN GAME\Shaders\ParticleAlphaBlendStroke.shader" />
     <None Include="Assets\GPUInstancer\Demos\CustomComputeShader\Resources\GPUIBoids.compute" />
     <None Include="Assets\GPUInstancer\Resources\Compute\Include\Random.compute" />
+    <None Include="Assets\MAIN GAME\Shaders\2DOutline\Shaders\ToonlitStencil.shader" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Surface-Mobile.shader" />
     <None Include="Assets\GPUInstancer\Resources\Compute\CSInstancedBufferToTexture.compute" />
     <None Include="Assets\NiceVibrations\ThirdParty\Newtonsoft\NewtonsoftJsonLicense.txt" />
